infra/configs/base/harbor/ingress-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
  labels:
    app.kubernetes.io/name: harbor
    app.kubernetes.io/component: ingress
spec:
  parentRefs:
    - name: default-gateway
      namespace: prod
  hostnames: ["harbor.isning.moe"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
        - path:
            type: PathPrefix
            value: /service/
        - path:
            type: PathPrefix
            value: /v2/
        - path:
            type: PathPrefix
            value: /c/
      backendRefs:
        - name: harbor-core
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor-portal
          port: 80
